# penfolio-api

./: .gitignore  README.md  build.sh  db.sqlite3  manage.py  pyproject.toml
journals_api/: utils.py
journals_api/migrations/: 0001_initial.py
journals_api/models/: journals_model.py  user_model.py
journals_api/schemas/: base_schema.py  journal_schemas.py  user_schemas.py
journals_api/v1/: base.py  journal_api.py  user_api.py  utils.py
penfolio/: asgi.py  settings.py  urls.py  wsgi.py
