[project]
name = "penfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cloudinary>=1.44.1",
    "django>=5.2.3",
    "django-cors-headers>=4.7.0",
    "django-ninja-jwt>=5.3.7",
    "django-ninja[jwt]>=1.4.3",
    "gunicorn>=23.0.0",
    "pydantic[email]>=2.11.7",
    "pylint-django>=2.6.1",
    "python-decouple>=3.8",
]
